--- a/functions/test-db/json2/scvo/templates/main_search/search.hbs
+++ b/functions/test-db/json2/scvo/templates/main_search/search.hbs
@@ -67,10 +67,7 @@
                         {{>filter_checkbox label="Evidence Library documents" value="scvo-document-evidence"}}
                         {{>filter_checkbox label="Member organisations" value="scvo-member"}}
                         {{>filter_checkbox label="Staff" value="scvo-staff"}}
-                        {{>filter_checkbox label="SCVO Events" value="scvo-event"}}
-                        {{>filter_checkbox label="Digital events" value="scvo-event-digital"}}
-                        {{>filter_checkbox label="Policy events" value="scvo-event-policy"}}
-                        {{>filter_checkbox label="Training courses" value="scvo-event-training"}}
+                        {{>filter_checkbox label="Events &amp; training" value="scvo-event"}}
 
                         <h3>Digital programme</h3>
                         {{>filter_checkbox label="Funded projects" value="scvo-grant-charter"}}
