--- a/functions/test-db/json2/scvo/templates/events/event-digital-search.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-digital-search.hbs
@@ -81,7 +81,7 @@
         {{else}}
         <h2>No results</h2>
         <p>
-            There are no upcoming events. Please check back soon.
+            There are no upcoming events{{#if params.query.q ~}} for your search query{{/if ~}}. Please check back soon.
         </p>
         {{/compare}}
     </div>
