I love charity page

--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -699,6 +699,7 @@ primary-dark: #251032
 .gist.scvo-cms-post,
 .list.scvo-cms-post,
 .breadcrumbs,
+.page-content .breadcrumbs,
 .page-content,
 .grant-content,
 .page-related,
@@ -1949,6 +1950,35 @@ body.the-gathering {
 body.the-gathering .full {
     width: 60%;
 }
+body.i-love-charity {
+    h3 {
+        margin: 0 0 $unit;
+    }
+    .mdc-card__primary {
+        h2 {
+            margin: 0;
+        }
+    }
+    .mdc-card__media {
+        height: 250px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        margin-bottom: $unit;
+    }
+    .mdc-card.contact-teas .mdc-card__media {
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/contact-teas.jpg');
+    }
+    .mdc-card.the-yard .mdc-card__media {
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/celine-sinclair-the-yard.jpg');
+    }
+    .mdc-card.starter-packs-glasgow .mdc-card__media {
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/starter-packs.jpg');
+    }
+    .mdc-card.friends-of-oban-community-playpark .mdc-card__media {
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/oban.jpg');
+    }
+}
 body.scottish-charity-awards {
     .mdc-card {
         .mdc-card__primary .mdc-card__title {
@@ -2086,7 +2116,7 @@ body.the-gathering .page-info,
             width: 50%;
         }
     }
-    
+
     .cta-content.callout {
         padding: $unit 0 $unit*3.25;
         h2, h3, a, .fa, .fal, .fab, .fas, .far {
