--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1951,6 +1951,14 @@ body.the-gathering .full {
     width: 60%;
 }
 body.i-love-charity {
+    .splash-image .container-fluid .mdc-layout-grid {
+        margin: 0;
+        width: 100% !important;
+        img {
+            margin: 0 auto;
+            display: block;
+        }
+    }
     h3 {
         margin: 0 0 $unit;
     }
