Charity campaign home

--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -66,16 +66,42 @@
     </div>
 </section>
 
+<div class="featured-background-image i-love-charity">
+    <div class="container-fluid">
+        <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
+            <div class="mdc-layout-grid__inner" style="position: relative;">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone" style="text-align: center;">
+                    <a href="/projects-campaigns/i-love-charity">
+                        <img class="header-image" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/02/i-love-charity-lp-banner.png" style="max-width: 100%; height: auto;">
+                    </a>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                    <div class="mdc-card v-margin-full">
+                        <section class="mdc-card__supporting-text" style="color: black !important;">
+                            The <strong>‘I Love Charity’ campaign</strong> aims to inspire trust in charities by supporting good governance and encouraging charities to better promote the impact of their work.
+                        </section>
+                        <section class="mdc-card__actions">
+                            <ul>
+                                <li><a class="mdc-card__action mdc-button" href="/projects-campaigns/i-love-charity">Find out more</a></li>
+                            </ul>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="featured-background-image" style="padding: 1rem 0; background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/scvo-hp-g2018-banner-gb-1400x400.jpg');">
     <div class="container-fluid">
         <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
             <div class="mdc-layout-grid__inner" style="position: relative;">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" style="text-align: center;">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" style="text-align: center;">
                     <a href="/the-gathering">
                         <img class="header-image" src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/g2018-logo-WHITE-DETAIL.png" style="max-width: 100%; height: auto;">
                     </a>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                     <div class="mdc-card" style="background-color: rgba(0,0,0,0.5);">
                         <section class="mdc-card__supporting-text">
                             The Gathering is the largest free third sector event in the UK, a place for all the amazing people working in the third sector to network, showcase what they do and learn from each other.
@@ -112,12 +138,12 @@
         <div class="container-fluid">
             <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                         <a href="/scottish-charity-awards">
                             <img alt="Scottish Charity Awards" class="header-text" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/SCA_2018_LOGO_MAIN.png">
                         </a>
                     </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                         <div class="mdc-card">
                             <div class="mdc-card-inner">
                                 <h2>
@@ -138,12 +164,12 @@
         <div class="container-fluid">
             <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
                         <a href="/projects-campaigns/europe-and-the-third-sector/eu-are-valued">
                             <img alt="#EUareValued" class="header-text" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/eu-are-valued-text.png">
                         </a>
                     </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone">
                         <p style="padding-top: 2.5rem; line-height: 1.6rem; font-size: 1.25rem;">
                             Here at SCVO, we love charities. We believe every person who works to make a difference to Scottish communities should be valued, and that includes our colleagues who have come from other EU countries to live and work here. Scotland’s third sector is strengthened thanks to their contribution&hellip;
                             <a href="/projects-campaigns/europe-and-the-third-sector/eu-are-valued">Read more</a>
@@ -186,7 +212,7 @@
                         Find information on&hellip;
                     </h2>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                     <h3>
                         <a href="/setting-up-a-charity">
                             <span class="fal fa-book fa-fw fa-3x" aria-hidden="true"></span>
@@ -194,7 +220,7 @@
                         </a>
                     </h3>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                     <h3>
                         <a href="/funding">
                             <span class="fal fa-money-bill fa-fw fa-3x" aria-hidden="true"></span>
@@ -202,7 +228,7 @@
                         </a>
                     </h3>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                     <h3>
                         <a href="/events">
                             <span class="fal fa-graduation-cap fa-fw fa-3x" aria-hidden="true"></span>
@@ -210,7 +236,7 @@
                         </a>
                     </h3>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                     <h3>
                         <a href="/jobs">
                             <span class="fal fa-briefcase fa-fw fa-3x" aria-hidden="true"></span>
