Charity campaign styling

--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1936,6 +1936,9 @@ section.search {
 }
 .credit-union .splash-image .splash-overlay .container-fluid {
     min-height: $unit*9;
+    .mdc-layout-grid {
+        margin: $unit*2 0;
+    }
     img.header-text {
         max-height: $unit*6;
     }
@@ -2371,6 +2374,11 @@ table.membership-fees {
     }
 }
 .section-campaigns {
+    .i-love-charity .mdc-card__media {
+        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/02/i-love-charity-lp-banner.png');
+        background-size: 90%;
+        background-color: white;
+    }
     .europe-and-the-third-sector .mdc-card__media {
         background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/europe-and-the-third-sector-bg-1400x400.jpg');
     }
