--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -70,15 +70,15 @@
     <div class="container-fluid">
         <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
             <div class="mdc-layout-grid__inner" style="position: relative;">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone" style="text-align: center;">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" style="text-align: center;">
                     <a href="/projects-campaigns/i-love-charity">
                         <img class="header-image" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/02/i-love-charity-lp-banner.png" style="max-width: 100%; height: auto;">
                     </a>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                     <div class="mdc-card v-margin-full">
                         <section class="mdc-card__supporting-text" style="color: black !important;">
-                            The <strong>‘I Love Charity’ campaign</strong> aims to inspire trust in charities by supporting good governance and encouraging charities to better promote the impact of their work.
+                            The <strong>‘I Love Charity’ campaign</strong> aims to inspire trust in charities by supporting good governance within organisations to ensure they are well run, open and transparent, and to encourage charities to work harder at promoting the positive impact of their work.
                         </section>
                         <section class="mdc-card__actions">
                             <ul>
