--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1985,9 +1985,13 @@ body.the-gathering {
 body.the-gathering .full {
     width: 60%;
 }
-body.i-love-charity {
+body.datawareness,
+body.i-love-charity,
+body.right-approach,
+body.building-healthier-happier-communities {
     .splash-image .splash-overlay .container-fluid {
         min-height: 125px;
+        padding-top: $unit*2;
         img.header-text {
             max-height: 100%;
         }
@@ -1999,6 +2003,12 @@ body.i-love-charity {
             margin: 0 auto;
             display: block;
         }
+    }
+}
+body.i-love-charity {
+    .splash-image .splash-overlay .container-fluid {
+        min-height: 125px;
+        padding-top: 0;
     }
     h3 {
         margin: 0 0 $unit;
@@ -2387,12 +2397,18 @@ table.membership-fees {
     }
     .building-healthier-happier-communities .mdc-card__media {
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/header-bhhc.jpg');
+        background-size: 90%;
+        background-color: white;
     }
     .datawareness .mdc-card__media {
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/header-datawareness.png');
+        background-size: 90%;
+        background-color: white;
     }
     .right-approach .mdc-card__media {
         background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/06/right-approach-strapline-hires-1024x337.jpg');
+        background-size: 90%;
+        background-color: white;
     }
     .welfare-reform .mdc-card__media {
         background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/welfare-reform-bg-1400x400.jpg');
