--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -2096,6 +2096,7 @@ body.scottish-charity-awards {
     }
 }
 // .mdc-temporary-drawer,
+.hidden,
 .about.staff-team .post-info-author,
 .about.work-with-us .page-info,
 .digital.charter-fund.projects .page-info,
