--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -2096,7 +2096,9 @@ body.scottish-charity-awards {
     }
 }
 // .mdc-temporary-drawer,
-.hidden,
+.hidden {
+    display: none !important;
+}
 .about.staff-team .post-info-author,
 .about.work-with-us .page-info,
 .digital.charter-fund.projects .page-info,
