--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -2852,8 +2852,14 @@ body.post.author {
     box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
     -webkit-box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
     .mdc-button {
+        box-shadow: none !important;
+        -webkit-box-shadow: none;
         padding: 0 $unit;
         line-height: 2.23rem;
+        border: none;
+        text-align: left;
+        margin-bottom: 0;
+        border-radius: 0;
     }
     .menu-level-2 {
         padding-left: $unit*1.5;
@@ -2864,13 +2870,8 @@ body.post.author {
     .menu-level-4 {
         padding-left: $unit*2.5;
     }
-    .mdc-button {
-        border: none;
-        text-align: left;
-        margin-bottom: 0;
-        border-radius: 0;
-        box-shadow: none;
-        -webkit-box-shadow: none;
+    .menu-level-5 {
+        padding-left: $unit*3;
     }
     .mdc-button:first-child {
         border-radius: 2px 2px 0 0;
