--- a/functions/test-db/json2/scvo/partials/menu-charter-funding.hbs
+++ b/functions/test-db/json2/scvo/partials/menu-charter-funding.hbs
@@ -1,5 +1,5 @@
-<nav class="menu-sidebar" id="running-legislation-menu">
-    {{#each context.menus.running-legislation ~}}
+<nav class="menu-sidebar" id="charter-funding-menu">
+    {{#each context.menus.charter-funding ~}}
     <a class="menu-level-1 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
     {{#each this.children ~}}
     <a class="menu-level-2 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
@@ -15,5 +15,3 @@
     {{/each ~}}
     {{/each ~}}
 </nav>
-
-{{> sidebar_running}}
