--- a/functions/test-db/json2/scvo/partials/menu-running-funding.hbs
+++ b/functions/test-db/json2/scvo/partials/menu-running-funding.hbs
@@ -7,6 +7,9 @@
     <a class="menu-level-3 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
     {{#each this.children ~}}
     <a class="menu-level-4 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
+    {{#each this.children ~}}
+    <a class="menu-level-5 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
+    {{/each ~}}
     {{/each ~}}
     {{/each ~}}
     {{/each ~}}
