--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -66,33 +66,55 @@
     </div>
 </section>
 
-<div class="featured-background-image i-love-charity">
-    <div class="container-fluid">
-        <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
-            <div class="mdc-layout-grid__inner" style="position: relative;">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" style="text-align: center;">
-                    <a href="/projects-campaigns/i-love-charity">
-                        <img class="header-image" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/02/i-love-charity-lp-banner.png" style="max-width: 100%; height: auto;">
-                    </a>
-                </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-                    <div class="mdc-card v-margin-full">
-                        <section class="mdc-card__supporting-text" style="color: black !important;">
-                            The <strong>‘I Love Charity’ campaign</strong> aims to inspire trust in charities by supporting good governance within organisations to ensure they are well run, open and transparent, and to encourage charities to work harder at promoting the positive impact of their work.
-                        </section>
-                        <section class="mdc-card__actions">
-                            <ul>
-                                <li><a class="mdc-card__action mdc-button" href="/projects-campaigns/i-love-charity">Find out more</a></li>
-                            </ul>
-                        </section>
+<section class="featured-content">
+
+    <div class="featured-background-image i-love-charity">
+        <div class="container-fluid">
+            <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
+                <div class="mdc-layout-grid__inner" style="position: relative;">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" style="text-align: center;">
+                        <a href="/projects-campaigns/i-love-charity">
+                            <img class="header-image" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/02/i-love-charity-lp-banner.png" style="max-width: 100%; height: auto;">
+                        </a>
+                    </div>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                        <div class="mdc-card v-margin-full">
+                            <section class="mdc-card__supporting-text" style="color: black !important;">
+                                The <strong>‘I Love Charity’ campaign</strong> aims to inspire trust in charities by supporting good governance within organisations to ensure they are well run, open and transparent, and to encourage charities to work harder at promoting the positive impact of their work.
+                            </section>
+                            <section class="mdc-card__actions">
+                                <ul>
+                                    <li><a class="mdc-card__action mdc-button" href="/projects-campaigns/i-love-charity">Find out more</a></li>
+                                </ul>
+                            </section>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="featured-background-image" style="padding: 1rem 0; background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/scvo-hp-g2018-banner-gb-1400x400.jpg');">
+    <div class="featured-background-image" style="background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/eu-are-valued-bg-1400x400.jpg');">
+        <div class="container-fluid">
+            <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
+                <div class="mdc-layout-grid__inner">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
+                        <a href="/projects-campaigns/europe-and-the-third-sector/eu-are-valued">
+                            <img alt="#EUareValued" class="header-text" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/eu-are-valued-text.png">
+                        </a>
+                    </div>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone">
+                        <p style="padding-top: 2.5rem; line-height: 1.6rem; font-size: 1.25rem;">
+                            Here at SCVO, we love charities. We believe every person who works to make a difference to Scottish communities should be valued, and that includes our colleagues who have come from other EU countries to live and work here. Scotland’s third sector is strengthened thanks to their contribution&hellip;
+                            <a href="/projects-campaigns/europe-and-the-third-sector/eu-are-valued">Read more</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+<!-- <div class="featured-background-image" style="padding: 1rem 0; background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/scvo-hp-g2018-banner-gb-1400x400.jpg');">
     <div class="container-fluid">
         <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
             <div class="mdc-layout-grid__inner" style="position: relative;">
@@ -117,9 +139,8 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
-<section class="featured-content">
     <div class="container-fluid">
         <h2>
             Latest blog post
@@ -159,26 +180,6 @@
             </div>
         </div>
     </div>
-
-    <!-- <div class="featured-background-image" style="background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/eu-are-valued-bg-1400x400.jpg');">
-        <div class="container-fluid">
-            <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
-                <div class="mdc-layout-grid__inner">
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
-                        <a href="/projects-campaigns/europe-and-the-third-sector/eu-are-valued">
-                            <img alt="#EUareValued" class="header-text" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/eu-are-valued-text.png">
-                        </a>
-                    </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone">
-                        <p style="padding-top: 2.5rem; line-height: 1.6rem; font-size: 1.25rem;">
-                            Here at SCVO, we love charities. We believe every person who works to make a difference to Scottish communities should be valued, and that includes our colleagues who have come from other EU countries to live and work here. Scotland’s third sector is strengthened thanks to their contribution&hellip;
-                            <a href="/projects-campaigns/europe-and-the-third-sector/eu-are-valued">Read more</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
 
     <div class="container-fluid">
         <h2>
