--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1103,6 +1103,9 @@ section.search {
                 max-width: 100%;
             }
         }
+        .featured-background-image.i-love-charity {
+            padding: 0;
+        }
         .featured-background-image.charity-awards {
             .mdc-card {
                 background-color: rgba(0,0,0,0.5);
@@ -1949,7 +1952,7 @@ section.search {
         max-height: $unit*6;
     }
 }
-body.scottish-charity-awards:not(body.post.scottish-charity-awards),
+body.scottish-charity-awards,
 body.the-gathering {
     .container-fluid,
     .page-content {
