--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -41,10 +41,10 @@
                     <div class="mdc-layout-grid">
                         <div class="mdc-layout-grid__inner">
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                                <a href="/the-gathering">The Gathering</a>
+                                <a href="/scottish-charity-awards">Scottish Charity Awards</a>
                             </div>
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                                <a href="/scottish-charity-awards">Scottish Charity Awards</a>
+                                <a href="/digital">Digital</a>
                             </div>
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                                 <a href="/running-your-organisation/business-planning/writing-business-plan">Writing a business plan</a>
