General improvements and bugfixes

--- a/functions/test-db/json2/scvo/templates/events/event-booking.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-booking.hbs
@@ -1,6 +1,6 @@
 <div class="event event-booking">
     {{> header_splash_event}}
-    <div class="container-fluid">
+    <div class="container-fluid page-content">
         {{#with primaryResponse.hits.hits.[0]._source ~}}
             <ul class="breadcrumbs">
                 <li><a href="/">Home</a></li>
