--- a/functions/test-db/json2/scvo/templates/events/event-policy.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-policy.hbs
@@ -12,7 +12,7 @@
 
         {{{rendered.scvo_full}}}
 
-        <div class="event-content">
+        <div class="page-content">
             {{#compare course_type "===" "Training Course" ~}}
             <p>
                 <strong>Please read our <a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx">policies, procedures and terms &amp; conditions document</a> before making your booking.</strong>
