--- a/functions/test-db/json2/scvo/templates/events/event-digital-booking.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-digital-booking.hbs
@@ -1,6 +1,6 @@
 <div class="event event-booking">
     {{> header_splash_event}}
-    <div class="container-fluid">
+    <div class="container-fluid page-content">
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/digital">Digital</a></li>
